# auto-claude-worktrees

./: .gitignore  README.md  pyproject.toml
blog/: BLOG_POST.md
blog/visuals/: post6-hero.html
config/: default.toml
src/auto_claude/: __init__.py  cli.py  config.py  factory.py  ideate.py  merge.py  models.py  qa.py  specgen.py
